kubernetes/yml/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es
spec:
  serviceName: es-hs
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: es
  template:
    metadata:
      labels:
        app: es
        kubernetes.io/name: "es"
        tier: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        #prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9108"        
    spec:
      containers:
      - name: es-exporter
        command:
        - /bin/elasticsearch_exporter
        - -es.uri=http://es:9200
        - -es.all=true
        image: justwatch/elasticsearch_exporter:1.0.1
        securityContext:
          capabilities:
            drop:
            - SETPCAP
            - MKNOD
            - AUDIT_WRITE
            - CHOWN
            - NET_RAW
            - DAC_OVERRIDE
            - FOWNER
            - FSETID
            - KILL
            - SETGID
            - SETUID
            - NET_BIND_SERVICE
            - SYS_CHROOT
            - SETFCAP
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 9108
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 9108
        readinessProbe:
          httpGet:
            path: /health
            port: 9108
          initialDelaySeconds: 10
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 25m
            memory: 64Mi
      restartPolicy: Always
      
#      - image: gcr.io/google-containers/elasticsearch:v5.5.1-1
      - image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
        name: es
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
            memory: 2.5Gi
          requests:
            memory: 2.5Gi
            cpu: 100m
        ports:
        - containerPort: 9200
          name: web
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: default
  labels:
    app: es
spec:
  type: NodePort
  ports:
  - port: 9200
    protocol: TCP
    name: web
  - port: 9300
    protocol: TCP
    name: transport
  selector:
    app: es
---
apiVersion: v1
kind: Service
metadata:
  name: es-hs
  labels:
    app: es
spec:
  ports:
  - port: 9200
    name: web
  - port: 9300
    name: transport
  clusterIP: None
  selector:
    app: es
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-ingress
spec:
  rules:
  - host: elasticsearch
    http:
      paths:
      - path: /
        backend:
          serviceName: es
          servicePort: 9200
